--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@reduxjs/toolkit": "^2.3.0",
     "antd": "^5.21.1",
     "axios": "^1.7.7",
     "next": "^14.2.13",
     "react": "18.3.1",
-    "react-dom": "18.3.1"
+    "react-dom": "18.3.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "20.14.12",
