--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@casl/ability": "^6.7.2",
     "@casl/react": "^4.0.0",
     "@fortawesome/free-brands-svg-icons": "^6.6.0",
+    "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@reduxjs/toolkit": "^2.3.0",
