--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^14.2.13",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hot-toast": "^2.4.1",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
